--- a/src/app/dashboard/pages/form-update/form-update.component.html
+++ b/src/app/dashboard/pages/form-update/form-update.component.html
@@ -445,7 +445,10 @@
 
 
   <!-- <div class="row mt-4">
-    {{myForm.value |  json}}
+    {{editedValues |  json}}
+  </div>
+  <div class="row mt-4">
+    {{initialValues |  json}}
   </div> -->
 </form>
 <!-- laoder -->
