--- a/src/app/main/pages/buttons/buttons.component.html
+++ b/src/app/main/pages/buttons/buttons.component.html
@@ -14,6 +14,12 @@
       <span>Ya estoy Inscrito</span>
     </button>
   </a>
+    <a routerLink="./establecimientos/informacion-visita" style="text-decoration: none;">
+    <button type="button" class="btn-govco outline-secundary-btn-govco icon-btn-govco" style="width: 250px; height: 42px;">
+      <span class="govco-svg govco-search"></span>
+      <span>Estado de la visita</span>
+    </button>
+  </a>
 
   </div>
 </div>
