--- a/src/app/dashboard/pages/principal/principal.component.html
+++ b/src/app/dashboard/pages/principal/principal.component.html
@@ -31,7 +31,7 @@
     </a>
     </div>
   <div class="col-md-4 mb-4 mx-xs-2 ">
-  <a class="tarjeta-govco  vertical-tarjeta-govco cursor"  title="Solicita tu visita">
+  <a class="tarjeta-govco  vertical-tarjeta-govco cursor"  title="Solicita tu visita"  routerLink="./validar-visita">
 
       <div class="container-img-tarjeta-govco borderStyle">
         <img class="image-tarjeta-govco visitaImg"
