img number feature

--- a/src/app/dashboard/pages/autoevaluacion/autoevaluacion.component.html
+++ b/src/app/dashboard/pages/autoevaluacion/autoevaluacion.component.html
@@ -1,7 +1,7 @@
 <general-miga [items]="breadcrumbItems"></general-miga>
 <titulo-tramite [title]="titulo" [subtitle]="subitulo" class="mt-2"></titulo-tramite>
 
-<h4 class="text-center mt-4"><img src="/img/numero-2.png" alt="" width="3%">&nbsp;&nbsp;&nbsp;Realizo mi Auto Evaluación</h4><br><br>
+<h4 class="text-center mt-4"><img src="./img/numero-2.png" alt="" width="3%">&nbsp;&nbsp;&nbsp;Realizo mi Auto Evaluación</h4><br><br>
 
 <h5 class="text-center mt-0"><b>NIT: </b>  <span class="text-success">{{establecimiento?.nit}}</span> | <b>Inscripcion: </b><span class="text-success">{{establecimiento?.inscripcion}}</span></h5>
 <h5 class="text-center"><b>Razon Social: </b>  <span class="text-success"> {{establecimiento?.razon_social}}</span></h5>
