--- a/src/app/dashboard/pages/crear/crear.component.html
+++ b/src/app/dashboard/pages/crear/crear.component.html
@@ -10,7 +10,7 @@
   <div class="col-md-12 mt-3 text-end">
     <a routerLink="/establecimientos/validar" class="btn btn-link">Cancelar</a>
    </div>
-     <p class="text1-govco text-center"> <img src="/img/numero-1.png" alt="" width="3%">&nbsp;&nbsp;&nbsp;Continuemos la inscripción</p>
+     <p class="text1-govco text-center"> <img src="./img/numero-1.png" alt="" width="3%">&nbsp;&nbsp;&nbsp;Continuemos la inscripción</p>
 
      <h6>Datos Basicos del Establecimiento</h6>
       <hr>
