--- a/src/app/dashboard/pages/visita/visita.component.html
+++ b/src/app/dashboard/pages/visita/visita.component.html
@@ -6,7 +6,7 @@
 ></titulo-tramite>
 
 <h4 class="text-center mt-4">
-  <img src="/img/numero-3.png" alt="" width="3%" />&nbsp;&nbsp;&nbsp;Solicito mi
+  <img src="./img/numero-3.png" alt="" width="3%" />&nbsp;&nbsp;&nbsp;Solicito mi
   visita técnica
 </h4>
 <br /><br />
