ajustes de tabla responsive y loader oculto

--- a/src/app/dashboard/pages/informacion-visita/informacion-visita.component.html
+++ b/src/app/dashboard/pages/informacion-visita/informacion-visita.component.html
@@ -188,6 +188,7 @@
           <div class="col-md-12">
             <h6 class="bg-gov-titulo">Trazabilidad de la visita</h6>
             <hr />
+            <div class="table-responsive">
             <table
               class="table table-striped table-bordered"
               *ngIf="visita[0].observaciones"
@@ -220,6 +221,7 @@
                 </tr>
               </tbody>
             </table>
+          </div>
           </div>
         </div>
         <div class="row">
