--- a/src/app/dashboard/pages/visita/visita.component.html
+++ b/src/app/dashboard/pages/visita/visita.component.html
@@ -45,7 +45,7 @@
             <b>1. Documento de representación* <br /></b>
             Los documentos aceptados como prueba de representación pueden ser:
             Cámara de Comercio, Registro Único Tributario (RUT) o Resolución de
-            Habitabilición <br />
+            Habitabilición u otro documento que lo identifique <br />
             <span class="text-danger" style="font-size: 12px"
               >Solo se aceptan documentos .pdf de max 3MB</span
             >
@@ -56,13 +56,13 @@
         </div>
         <div class="col-md-6 mt-3">
           <p style="text-align: justify">
-            <b>2. Concepto de uso de suelo <br /></b>
+            <b>2. Concepto de uso de suelo <span class="text-danger">(Opcional)</span> <br /></b>
             Si no cuentas con el concepto de uso de suelo, puedes solicitarlo
             <a href="https://usodesuelo.bucaramanga.gov.co/" target="_blank"
               >aquí</a
             >. Tambien puedes acercarte a la Secretaría de Planeación y
             presentar una solicitud.
-            <br />
+            <br /> <br>
             <span class="text-danger" style="font-size: 12px"
               >Solo se aceptan documentos .pdf de max 3MB</span
             >
